adduser (3.90.0) UNRELEASED; urgency=low

  [ Marc Haber ]
  * NOT RELEASED YET

  [ Stephen Gran ]
  * Revert usage of systemcall for chage invocation (closes: #375524)

 -- Stephen Gran <sgran@debian.org>  Mon, 26 Jun 2006 19:08:28 +0100

adduser (3.90) unstable; urgency=low

  * 3.89 is not an NMU, I botched up the changelog. Fixing.

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Fri, 23 Jun 2006 14:23:00 +0000

adduser (3.89) unstable; urgency=low

  * Add additional check to testsuite/test8.pl to make sure system users are
    not added to extra groups. (sg)
  * New translations:
    - lt (Gintautas Miliauskas <gintas@akl.lt>) (sg) Closes: #374316
  * 3.88 was in experimental for a week without any bug reports.
  * now upload to unstable to let potential breakage begin.

 -- Stephen Gran <sgran@debian.org>  Mon, 19 Jun 2006 16:26:58 +0100

adduser (3.88) experimental; urgency=low

  [ Marc Haber ]
  * experimental version
  * Update French (fr) program translation.
    Thanks to Thomas Huriaux. Closes: #366885
  * Update French (fr) manpage translation.
    Thanks to Nicolas François. Closes: #367380
  * Apply two small patches to deluser man page.
    Thanks to Florentin Duneau. Closes: #367213
  * Update Italian (it) program and manpage translations.
    Thanks to Luca Monducci. Closes: #370030
  * Standards-Version: 3.7.2, no changed necessary.

  [ Stephen Gran ]
  * allow additional groups to be used for a new user.
    Closes: #147518, #166718, #212452, #233894, #239006, #240707, #240855
  * test 8 now adds a group, and adds the new user to that group - this should
    ensure that the new additional groups feature does not get invoked for
    'adduser to group' code paths
  * Fix "adduser: adduser:" output of error messages.
  * Fix error messages like "foo ", gtx( ..., whch does not produce
    output at all. Closes: #351968
  * Honor system PATH, do not hard-code paths to sub-programs.
    Closes: #357978